# zero2prod

./: Cargo.toml  Dockerfile  Makefile
configuration/: base.yaml  production.yaml
migrations/: 20230117001725_create_subscriptions_table.sql  20230203235013_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
